# lil-aretomo

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.eggs/pyparsing-3.0.8-py3.9.egg/EGG-INFO/: RECORD
.github/workflows/: test_and_deploy.yml
example/: test.py
examples/: fiducials.py  patch_tracking.py
lil_aretomo/: TS_121.aln  TS_121.xf  __init__.py  _version.py  aretomo.py  constants.py  global.py  global_aretomo.py  lil_aretomo.py  output.py  patch_tracking.py  utils.py
tests/: conftest.py  test_fiducials.py  test_patch_tracking.py  test_stub.py  test_utils.py
tests/test_data/: example.aln  example_v1_3_0.aln
yet_another_imod_wrapper/: __init__.py  fiducials.py
yet_another_imod_wrapper/batchruntomo_config/: fiducials.adoc  io.py  patch_tracking.adoc
