[metadata]
name = lil_aretomo
description = AreTomo (w)rapper for rln4
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EuanPyle/lil_aretomo
author = Euan Pyle
author_email = euanpyle@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/EuanPyle/lil_aretomo

[options]
packages = find:
install_requires =
    numpy
    mrcfile
    typer
    rich
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools-scm
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    mypy
    pre-commit
    pydocstyle
    pytest
testing =
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = lil_aretomo

[pydocstyle]
match_dir = lil_aretomo
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = lil_aretomo
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
